2013-11-15  horneds

	* Version 1.2.0
	* Added posprocess param to mixer.register method

2013-09-22  horneds

	* Version 1.1.6
	* Bugfix release

2013-09-18  horneds

	* Version 1.1.4
	* Fix MongoEngine backend (c) Kirill Pavlov
	* By default mongoengine save models in database

2013-09-11  horneds

	* Version 1.1.2
	* SQLAlchemy bugfix

2013-09-06  horneds

	* Version 1.1.1
	* `mixer.register` could pinned just a values to field

2013-09-05  horneds

	* Version 1.0.0
	* Added `mixer.register` method (register custom generators for fields)

2013-09-04  horneds

	* Version 0.11.3
	* Fixed Django m2m

2013-08-21  horneds

	* Version 0.11.2
	* Minor changes

2013-07-31  horneds

	* Version 0.11.1
	* Added FileField and ImageField support to django backend;
	* Supports Flask-SQLAlchemy for python 3;
	* [Django] Supports model creation only by model name. For now you can
	  use three methods:

	    1) mixer.blend(SomeModel) # by class
	    2) mixer.blend('someapp.somemodel') # by 'app.model' string
	    3) mixer.blend('somemodel') # short form for unique model names

2013-07-15  horneds

	* Version 0.9.1
	* Allow mixer.sequence to get a few argument and make generators from them
	* Fix bug with 'mixer.fake' attribute;

2013-07-05  horneds

	* Version 0.8.1
	* Change float's generator (limits set to -99999 -- 99999)

2013-06-26  horneds

	* Version 0.8.0
	* Added automatic backend

2013-06-22  horneds

	* Version 0.7.0
	* Minor changes

2013-06-21  horneds

	* Version 0.6.4
	* Support django.models.URLField

2013-06-20  horneds

	* Version 0.6.3
	* Now `mixer.random` can accept a choices and return random value
	  http://mixer.readthedocs.org/en/latest/api.html#force-a-random-values

2013-06-19  horneds

	* Version 0.6.2
	* Added mongoengine support

2013-06-17  horneds

	* Version 0.5.1
	* Minor changes in docs

2013-06-04  horneds

	* Version 0.5.0
	* Mixer.random and Mixer.fake attributes could get a type of generated value